# desafio_tripulaciones_ML

./: .gitignore  pyproject.toml
