
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "desafio_tripulaciones_ML"
version = "0.1.0"
description = "Proyecto de Machine Learning"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ['py311']
